# openfinance-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy-ec2.sh  docker-compose.yml  justfile  pyproject.toml
.cursor/rules/: platform-requirements.mdc
app/: config.py  database.py  main.py  seed.py
app/agents/: registry.py  runner.py
app/executor/: executor.py
app/llm/: client.py
app/models/: __init__.py  base.py
app/planner/: planner.py  policy.py
app/routers/: agents.py  audit.py  chat.py  emails.py  invoices.py  payments.py  simulator.py  users.py
app/schemas/: schemas.py
app/services/: financial_context.py  tools.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  requirements.txt  test_agent.py
backend/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: agents.py  auth.py  banks.py  banks_models.py
backend/app/services/: agent.py  financial_tools.py  truelayer.py
frontend/: .firebaserc  Dockerfile  Dockerfile.railway  index.html  nginx.conf  package-lock.json  package.json
frontend/.firebase/: hosting.ZGlzdA.cache
frontend/src/: App.tsx  index.css
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: Accounts.tsx  AgentChat.tsx  AgentRuns.tsx  Agents.tsx  Chat.tsx  CreateAgent.tsx  Dashboard.tsx  Emails.tsx  Integrations.tsx  Invoices.tsx  Landing.tsx  Login.tsx  Payments.tsx  Register.tsx  Simulator.tsx  Transactions.tsx
tests/: conftest.py  test_api.py  test_policy.py  test_tools.py
